# gpx-route-timer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
misc/: add_timestamps_to_gpx_simple_version.py  example.gpx
src/gpx-route-timer/: __init__.py
src/gpx_route_timer/: __init__.py
