[build-system]
	requires = [
		"setuptools>=80.9.0",
		"wheel",
	]
	build-backend = "setuptools.build_meta"

[project]
	name = "gpx-route-timer"
	version = "0.1.0"
	description = "A Python tool to plan multi-day hikes by adding timestamps to GPX files"
	readme = "README.md"
	requires-python = ">=3.8"
	dependencies = [
		"requests>=2.31.0",
		"geopy>=2.4.1",
	]

[project.scripts]
	gpx-route-timer = "gpx_route_timer:main"
